Yet another round of site restructuring

--- a/docs/js/snippets/js-snippet-engage-with-countdown.mdx
+++ b/docs/js/snippets/js-snippet-engage-with-countdown.mdx
@@ -8,8 +8,8 @@ tags: [Marketing Cloud, Eloqua, JavaScript, Personalisation, Cloud Page]
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../src/components/LeadText.js';
-import { Countdown } from '../../src/components/Countdown.js';
+import { LeadText } from '../../../src/components/LeadText.js';
+import { Countdown } from '../../../src/components/Countdown.js';
 
 <LeadText content="Start boosting conversion rates right now! There are many ways to engage customers, and urgency is the king among them. Learn how to leverage it today." />
 
