Small cleanup after restructuring

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -1,6 +1,7 @@
 ---
 id: docs-and-snippets
 title: Docs & Snippets
+displayed_sidebar: docs
 slug: /
 description: SSJS + JS + AMPScript + SQL + SFMC Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud.
 image: img/og/og-image-docs-and-snippets.png
