Updated draft of Open Time Email article

--- a/docs/interaction-studio/is-open-time-email.mdx
+++ b/docs/interaction-studio/is-open-time-email.mdx
@@ -2,14 +2,14 @@
 id: is-open-time-email
 title: IS Open Time Email Template
 sidebar_label: Open Time Email
-description: WIP.
+description: Personalise your emails with the next best action. In real-time. Even after delivery. Magic.
 image: img/og/og-image-is-open-time-email.png
 tags: [Interaction Studio, Personalisation, Email]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='WIP.' />
+<LeadText content='Personalise your emails with the next best action recommenations. In real-time. Even after delivery. Magic.' />
 
 ## What is Open Time Email Campaign
 
@@ -18,5 +18,4 @@ The general rule of email communication is that the momement you send the email 
 1. __Links__ - you cannot change the URL used in the email, but - if you use wrapper/tracking links - you can change the final target URL. In Marketing Cloud this feature is called [updating Job Links](https://help.salesforce.com/s/articleView?id=sf.mc_es_update_joblinks_overview.htm).
 2. __Images__ - you cannot change the URL of the image used in the email, but you can change the image hosted behind that URL. This is exactly what Open Time Email feature in Interaction Studio is all about.
 
-
-
+With Open Time Email Template you define the recommendations format (dimensions, content, personalisations) and with Open Time Email Campaign you use that template with selected recommendations logic (Einstein Recipe) to automatically generate HTML that will be showing ever-updating Next Best Action in your emails.
