Next batch of relative link fixes

--- a/docs/js/snippets/js-snippet-export-import-document-sfmc-roles.mdx
+++ b/docs/js/snippets/js-snippet-export-import-document-sfmc-roles.mdx
@@ -18,7 +18,7 @@ On top of that, standard Roles are silently changing from release to release as 
 
 Marketing Cloud doesn't make it easy. There is no option to clone existing Roles to serve as a starting point for a new custom one. There is no option to export and import them between SFMC accounts. There is no option to create good documentation on them (unless you have a kink for super long print screens).
 
-Here comes JavaScript and [Document Object Model (DOM)](./js-dom.mdx) to unlock all those scenarios.
+Here comes JavaScript and [Document Object Model (DOM)](../js-dom.mdx) to unlock all those scenarios.
 
 Fear not - you don't have to be a developer to leverage it. I will describe everything step-by-step and share ready-to-use snippets with you. Let's dive in.
 
@@ -158,7 +158,7 @@ Add the Name of the Role and its purpose stored in the Description field, and th
 
 ## Backup of Standard Roles
 
-As the [default System Roles permissions](../../config/sfmc-config-permissions/) in Salesforce Marketing Cloud can be edited freely and [currently there is no easy way to revert those changes](../../../sites/ideas/marketing-cloud/#restore-default-permissions-for-sfmc-standard-system-roles), I created a backup repository for you with all out-of-the-box configurations.
+As the [default System Roles permissions](../../config/sfmc-config-permissions.mdx) in Salesforce Marketing Cloud can be edited freely and [currently there is no easy way to revert those changes](../../../sites/ideas/marketing-cloud/#restore-default-permissions-for-sfmc-standard-system-roles), I created a backup repository for you with all out-of-the-box configurations.
 
 <Button
  link='https://github.com/MateuszDabrowski/sfmc-roles-backup'
