--- a/docs/ssjs/snippets/ssjs-snippet-ssjs-script-template.mdx
+++ b/docs/ssjs/snippets/ssjs-snippet-ssjs-script-template.mdx
@@ -249,7 +249,7 @@ If the script will be used in [JSON Code Resource backend](../../usecase/sfmc-co
 
 :::
 
-In many cross-cloud scenarios I also use [AMPScript runner](../ssjs-snippet-ampscript-in-ssjs.mdx), but as it is more use case specific solution, I don't keep it in base template.
+In many cross-cloud scenarios I also use [AMPScript runner](./ssjs-snippet-ampscript-in-ssjs.mdx), but as it is more use case specific solution, I don't keep it in base template.
 
 I prefix all functions with [documentation comments](../ssjs-style-guide.mdx#3-documentation-comments).
 
